#ES-243 - refactoring ExperimentScheduler